Use whereami.c to find the path of the irace.exe and ablation.exe executables.
The command-line executables `irace` and `ablation` (`irace.exe` and
`ablation.exe` in Windows) will load the version of the `irace` package that is
found in the same path where the executables are. In earlier versions, the
executables will always load the version found via `base::.libPaths()`.  This
change allows installing multiple versions of the irace package in different
locations and each executable will use its corresponding version.  The correct
location can be verified by looking at the line `"installed at:"` printed in
the output.

--- a/TODO
+++ b/TODO
@@ -53,11 +53,6 @@ TODO General (in order of importance):
  
  * Federico's implementation of DAG / Complexity metric.
 
- * In src/irace/irace.c, use https://github.com/gpakosz/whereami to find the
-   directory containing the 'irace' executable, then set
-   ".libPaths(c(.libPaths(), EXEC_DIR))" so that we load the package from the
-   directory holding the executable.
-
  * Use both cost and time to calculate wins, then use a prop.test
    prop.test(x=c(sum(x <0.5),sum(y<0.5)), n=c(length(x), length(y)))
 
@@ -295,6 +290,11 @@ TODO General (in order of importance):
 ------------------------------------------------------------------------------
 
 DONE:
+
+ * In src/irace/irace.c, use https://github.com/gpakosz/whereami to find the
+   directory containing the 'irace' executable, then set
+   ".libPaths(c(.libPaths(), EXEC_DIR))" so that we load the package from the
+   directory holding the executable.    [DONE by Manuel] 
 
  * use devtools::release() to release
    http://r-pkgs.had.co.nz/release.html#release-submission
